# tankbot

./: .gitignore  Pipfile  README.md  pyproject.toml  runner  setup.py
data/: lottery  subreddits
etc/: tankbot.service  tankbot.timer
tankbot/: __main__.py  analysis.py  api.py  date.py  generate.py  localdata.py  markdown.py  serde.py  util.py
tankbot/analysis/: __init__.py  playoffs.py  simulation.py  tank.py
tankbot/generate/: playoffs.py  tank.py
tests/: info0.json  info1.json  info2.json  test_analysis.py  test_playoffs_analysis.py  test_tank_analysis.py
