[tool.poetry]
name = "tankbot"
version = "0.1.0"
description = ""
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^0.13.0"
attrs = "^18.2"
praw = "^6.0"
requests = "^2.21"
nhlapi = {git = "https://github.com/reddit-habs/nhlapi.git"}

[tool.poetry.dev-dependencies]
pytest = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
